syntax = "proto3";

option java_package = "com.wemaka.weatherapp.store.proto";
option java_multiple_files = true;
option java_outer_classname = "LocationCoordProto";

message LocationCoordProto {
  double latitude = 1;
  double longitude = 2;
}